# usd-simple-decimation-schema

./: CMakeLists.txt  LICENSE  README.md
demo/: CMakelists.txt  simple-decimate.usda
imaging/: CMakeLists.txt  plugInfo.json  trimeshAdapter.cpp
schemas/: CMakeLists.txt  generatedSchema.usda  plugInfo.json  schema.usda
